# tooskool

./: .env  Procfile  manage.py  netlify.toml  package-lock.json  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
schools/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
schools/migrations/: 0001_initial.py  0002_rename_borders_school_boarders_and_more.py  0003_rename_ofstead_special_measures_school_ofsted_special_measures.py  0004_alter_school_urn.py  0005_alter_school_uprn_alter_school_urn.py  0006_remove_school_created_at_remove_school_updated_at.py  0007_school_featured_image.py  0008_alter_school_id.py  0009_alter_school_urn.py  0010_alter_school_id_alter_school_urn.py  0011_auto_20241214_1305.py  0012_auto_20241214_1309.py  0013_merge_0011_auto_20241214_1305_0012_auto_20241214_1309.py  0014_auto_20241214_1344.py  0015_merge_20241214_1345.py  0016_alter_school_id.py  0017_auto_20241214_1845.py  0018_merge_0016_alter_school_id_0017_auto_20241214_1845.py  0019_alter_school_id.py  0020_merge_20241214_1919.py  0021_merge_0019_alter_school_id_0020_merge_20241214_1919.py  0022_merge_20241214_1959.py  0023_alter_school_id.py  0024_alter_school_options_review.py  0025_school_vote_ratio_school_vote_total.py  0026_alter_school_options.py
theme/static_src/: tailwind.config.js
tooskool/: asgi.py  settings.py  supabase_utils.py  urls.py  wsgi.py
tooskool/templates/: index.html  login.html  main.html  navbar.html  pagination.html  reset_password.html  (+1 more)
users/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
(+28 files in other folders)
